--- a/frontend-mentor-projects/social-links/index.html
+++ b/frontend-mentor-projects/social-links/index.html
@@ -3,27 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jessica Randall | Social Links Profile</title>
+    <meta name="description" content="Social links of Gbemisola Oyeniyi">
+    <meta name="keywords" content="Social links, Gbemisola Oyeniyi, GitHub Profile Link, LinkedIn Profile Link, Frontend Mentor Profile Link, Twitter Profile Link">
+    <meta name="theme-color" content="#141414"
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
     <link rel="stylesheet" href="style.css">
+        <title>Gbemisola Oyeniyi | Social Links Profile</title>
 </head>
 <body>
     <div class="social-links-box">
-        <img src="avatar-jessica.jpeg" alt="Profile Picture" class="profile-picture">
-        <h1 class="profile-name">Jessica Randall</h1>
-        <p class="location">London, United Kingdom</p>
+        <img src="avatar-gbemisola.png" alt="Profile Picture" class="profile-picture">
+        <h1 class="profile-name">Gbemisola Oyeniyi</h1>
+        <p class="location">Nigeria</p>
         <p class="bio">Working to finance my dream hobbyist lifestyle.</p>
         <div class="social-links">
-            <a href="https://github.com" target="_blank" class="button">GitHub</a>
-            <a href="https://linkedin.com" target="_blank" class="button">LinkedIn</a>
-            <a href="https://twitter.com" target="_blank" class="button">Twitter</a>
-            <a href="https://frontendmentor.com" target="_blank" class="button">Frontend Mentor</a>
+            <a href="https://github.com/itsgbemi" target="_blank" class="button">GitHub</a>
+            <a href="https://www.linkedin.com/in/gbemisola-oyeniyi-093248210" target="_blank" class="button">LinkedIn</a>
+            <a href="https://www.fiverr.com/s/AydlDpB" target="_blank" class="button">Fiverr</a>
+            <a href="https://twitter.com/icecoldalvy" target="_blank" class="button">Twitter</a>
+            <a href="https://www.frontendmentor.io/profile/itsgbemi" target="_blank" class="button">Frontend Mentor</a>
         </div>
     </div>
     <div class="footer">
         <hr class="separator">
         <p class="footer-text">
-            Challenge by <a href="https://frontendmentor.com" target="_blank">frontendmentor</a>. Coded by <a href="https://github.com/jessica" target="_blank">Jessica Randall</a>.
+            Challenge by <a href="https://frontendmentor.com" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/itsgbemi" target="_blank">Gbemisola Oyeniyi</a>.
         </p>
     </div>
 </body>
