--- a/frontend-mentor-projects/social-links/index.html
+++ b/frontend-mentor-projects/social-links/index.html
@@ -12,6 +12,8 @@
         <title>Gbemisola Oyeniyi | Social Links Profile</title>
 </head>
 <body>
+    <div class="spacer">
+</div>
     <div class="social-links-box">
         <img src="avatar-gbemisola.png" alt="Profile Picture" class="profile-picture">
         <h1 class="profile-name">Gbemisola Oyeniyi</h1>
@@ -25,6 +27,8 @@
             <a href="https://www.frontendmentor.io/profile/itsgbemi" target="_blank" class="button">Frontend Mentor</a>
         </div>
     </div>
+    <div class="spacer">
+</div>
     <div class="footer">
         <hr class="separator">
         <p class="footer-text">
