--- a/frontend-mentor-projects/launch-countdown-timer/index.html
+++ b/frontend-mentor-projects/launch-countdown-timer/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Launching Soon</title>
+    <meta name="description" content="Website coming soon with launch countdown timer">
+    <meta name="keywords" content="Launch countdown, Countdown timer, Coming soon, Coming soon website">
+    <meta name="author" content="Gbemisola Oyeniyi">
+    <title>Launching Soon | Frontend Mentor Project</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
