--- a/frontend-mentor-projects/launch-countdown-timer/index.html
+++ b/frontend-mentor-projects/launch-countdown-timer/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Website coming soon with launch countdown timer">
     <meta name="keywords" content="Launch countdown, Countdown timer, Coming soon, Coming soon website">
-    <meta name="author" content="Gbemisola Oyeniyi">
+    <meta name="author" content="Gbemisola Oyeniyi">    
     <title>Launching Soon | Frontend Mentor Project</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -26,19 +26,19 @@
         </div>
         <div class="countdown">
             <div class="countdown-box">
-                <div id="days" class="countdown-time"></div>
+                <div id="days" class="countdown-time">00</div>
                 <div class="countdown-label">DAYS</div>
             </div>
             <div class="countdown-box">
-                <div id="hours" class="countdown-time"></div>
+                <div id="hours" class="countdown-time">00</div>
                 <div class="countdown-label">HOURS</div>
             </div>
             <div class="countdown-box">
-                <div id="minutes" class="countdown-time"></div>
+                <div id="minutes" class="countdown-time">00</div>
                 <div class="countdown-label">MINUTES</div>
             </div>
             <div class="countdown-box">
-                <div id="seconds" class="countdown-time"></div>
+                <div id="seconds" class="countdown-time">00</div>
                 <div class="countdown-label">SECONDS</div>
             </div>
         </div>
@@ -49,6 +49,7 @@
         </div>
     </div>
 
-    <script src="countdown.js"></script>
+    <!-- Defer the script to ensure faster loading -->
+    <script defer src="countdown.js"></script>
 </body>
 </html>
