--- a/frontend-mentor-projects/todo-app/index.html
+++ b/frontend-mentor-projects/todo-app/index.html
@@ -105,7 +105,7 @@
     </div>
     <div class="filter">
       <p>All</p>
-      <p>Active</p>
+      <p class="active">Active</p>
       <p>Completed</p>
     </div>
   </div>
