--- a/frontend-mentor-projects/todo-app/index.html
+++ b/frontend-mentor-projects/todo-app/index.html
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <div class="todo">
+  <div class="mobile-todo">
     <div class="list">
       <div class="task-box">
         <div class="circle-box">
@@ -105,7 +105,87 @@
     </div>
     <div class="filter">
       <p>All</p>
-      <p class="active">Active</p>
+      <p>Active</p>
+      <p>Completed</p>
+    </div>
+  </div>
+
+  <div class="desktop-todo">
+    <div class="list">
+      <div class="task-box">
+        <div class="circle-box">
+          <div class="circle"></div>
+        </div>
+        <div class="textbox">
+          <p>Complete online JavaScript course</p>
+        </div>
+        <div class="cross-box">
+          <img src="image/icon-cross.svg" alt="Cross Icon">
+        </div>
+      </div>
+      <div class="task-box">
+        <div class="circle-box">
+          <div class="circle"></div>
+        </div>
+        <div class="textbox">
+          <p>Jog around the park 3x</p>
+        </div>
+        <div class="cross-box">
+          <img src="image/icon-cross.svg" alt="Cross Icon">
+        </div>
+      </div>
+      <div class="task-box">
+        <div class="circle-box">
+          <div class="circle"></div>
+        </div>
+        <div class="textbox">
+          <p>10 minutes meditation</p>
+        </div>
+        <div class="cross-box">
+          <img src="image/icon-cross.svg" alt="Cross Icon">
+        </div>
+      </div>
+      <div class="task-box">
+        <div class="circle-box">
+          <div class="circle"></div>
+        </div>
+        <div class="textbox">
+          <p>Read for 1 hour</p>
+        </div>
+        <div class="cross-box">
+          <img src="image/icon-cross.svg" alt="Cross Icon">
+        </div>
+      </div>
+      <div class="task-box">
+        <div class="circle-box">
+          <div class="circle"></div>
+        </div>
+        <div class="textbox">
+          <p>Pick up groceries</p>
+        </div>
+        <div class="cross-box">
+          <img src="image/icon-cross.svg" alt="Cross Icon">
+        </div>
+      </div>
+      <div class="task-box">
+        <div class="circle-box">
+          <div class="circle"></div>
+        </div>
+        <div class="textbox">
+          <p>Complete todo app on Frontend Mentor</p>
+        </div>
+        <div class="cross-box">
+          <img src="image/icon-cross.svg" alt="Cross Icon">
+        </div>
+      </div>
+    </div>
+    <div class="status">
+      <div class="summary">6 items left</div>
+      <div class="clear">Clear Completed</div>
+    </div>
+    <div class="filter">
+      <p class="active">All</p>
+      <p>Active</p>
       <p>Completed</p>
     </div>
   </div>
