--- a/frontend-mentor-projects/dog-walker/index.html
+++ b/frontend-mentor-projects/dog-walker/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Layout</title>
+    <meta name="description" content="Solution to the Frontend Mentor Challenge for a dog walker chat app">
+    <meta name="keywords" content="Dog walker app, Frontend Mentor Project, Chat app">
+    <meta name="author" content="Gbemisola Oyeniyi">
+    <title>Dog Walker Chat App</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">    
 </head>
