--- a/index.html
+++ b/index.html
@@ -5,24 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="GitHub page of Gbemisola Oyeniyi">
   <meta name="keywords" content="Gbemisola Oyeniyi, Frontend Dev, GitHub Page, Portfolio, Website Development, Frontend, HTML, CSS, JavaScript">
-  <meta name="robots" content="index, follow">
-
-    <!-- Security Meta Tags -->
-    <meta name="referrer" content="no-referrer">
-
-    <!-- Favicon -->
-    <meta name="theme-color" content="#000000">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-
-    <!-- Link to CSS -->
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+  <title>Portfolio - Gbemisola Oyeniyi</title>
+  <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@200;300;500&family=Righteous&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css">
-    <title>Portfolio - Gbemisola Oyeniyi</title>
 </head>
 <body>
 
