--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
       <!-- Navigation links -->
       <ul class="nav-links">
         <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#skill">Skill</a></li>
-        <li><a href="#about">About</a></li>
         <li><a href="#blog">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       
       <!-- Hamburger menu for mobile -->
@@ -46,7 +45,7 @@
     <img src="icon/cat.svg" alt="Cat Icon" class="icon-inline">
       <h1>quirky</h1>
       <p>Hi, I'm Gbemisola Oyeniyi. Actively watering my skill garden.</p>
-  <a href="mailto:oliveajike@gmail.com?subject=Hello%20Gbemi" class="btn">Contact me</a>
+  <a href="contact.html" class="btn">Contact me</a>
     </div>
   </header>
 
