--- a/learn-digital-skills/digital-marketing.html
+++ b/learn-digital-skills/digital-marketing.html
@@ -9,36 +9,41 @@
     <title>Learn Website Development</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@200;300;500;700&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="blog.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" type="image/png" href="https://itsgbemi.github.io/favicon/favicon-48x48.png" sizes="48x48" />
+<link rel="icon" type="image/svg+xml" href="https://itsgbemi.github.io/favicon/favicon.svg" />
+<link rel="shortcut icon" href="https://itsgbemi.github.io/favicon/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://itsgbemi.github.io/favicon/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="Gbemi" />
+<link rel="manifest" href="https://itsgbemi.github.io/favicon/site.webmanifest" />
 </head>
 <body>
     <header role="banner" aria-label="Main navigation" id="main-header">
         <div class="header-container">
-            <a href="index.html" class="logo" aria-label="Gbemi logo">Gbemi</a>
+            <a href="https://itsgbemi.github.io/index.html" class="logo" aria-label="Gbemi logo">Gbemi</a>
             <nav aria-label="Primary navigation" class="desktop-nav">
                 <ul>
-     <li><a href="learn-digital-skills.html">Learn Digital Skills</a></li>
-         <li><a href="sales-and-marketing.html">Sales and Marketing</a></li>
-           <li><a href="shop.html">Websites and Graphics</a></li>       
-        <li><a href="blog.html">Blog</a></li>                  
+     <li><a href="https://itsgbemi.github.io/learn-digital-skills.html">Learn Digital Skills</a></li>
+         <li><a href="https://itsgbemi.github.io/sales-and-marketing.html">Sales and Marketing</a></li>
+           <li><a href="https://itsgbemi.github.io/shop.html">Websites and Graphics</a></li>       
+        <li><a href="https://itsgbemi.github.io/blog.html">Blog</a></li>                  
                 </ul>
             </nav>
             <div class="cta-buttons">
-                <a href="contact.html" class="cta consultation">Get in touch</a>
+                <a href="https://itsgbemi.github.io/contact.html" class="cta consultation">Get in touch</a>
             </div>
             <button class="mobile-menu-toggle" aria-expanded="false" aria-controls="mobile-menu">
-                <img src="icon/black-hamburger.svg" alt="Open navigation menu">
+                <img src="https://itsgbemi.github.io/icon/black-hamburger.svg" alt="Open navigation menu">
             </button>
         </div>
         <nav id="mobile-menu" class="mobile-nav" aria-hidden="true">
             <ul>
-                <li><a href="learn-digital-skills.html">Learn Digital Skills</a></li>
-                <li><a href="grow.html">Sales and Marketing</a></li>
-                <li><a href="shop.html">Website and Graphics</a></li>         
-                <li><a href="blog.html">Blog</a></li>                
+                <li><a href="https://itsgbemi.github.io/learn-digital-skills.html">Learn Digital Skills</a></li>
+                <li><a href="https://itsgbemi.github.io/sales-and-marketing.html">Sales and Marketing</a></li>
+                <li><a href="https://itsgbemi.github.io/shop.html">Website and Graphics</a></li>         
+                <li><a href="https://itsgbemi.github.io/blog.html">Blog</a></li>                
             </ul>
             <div class="mobile-cta">
-                <a href="contact.html" class="mobile-cta-button">Get in touch</a>
+                <a href="https://itsgbemi.github.io/contact.html" class="mobile-cta-button">Get in touch</a>
             </div>
         </nav>
     </header>
@@ -75,16 +80,16 @@
     <div class="share-buttons">
       <span class="share-text">Share this:</span>
       <a href="#" id="facebook-share" target="_blank">
-        <img src="icon/facebook.svg" alt="Facebook" />
+        <img src="https://itsgbemi.github.io/icon/facebook.svg" alt="Facebook" />
       </a>
       <a href="#" id="twitter-share" target="_blank">
-        <img src="icon/twitter.svg" alt="Twitter" />
+        <img src="https://itsgbemi.github.io/icon/twitter.svg" alt="Twitter" />
       </a>
       <a href="#" id="instagram-share" target="_blank">
-        <img src="icon/instagram.svg" alt="Instagram" />
+        <img src="https://itsgbemi.github.io/icon/instagram.svg" alt="Instagram" />
       </a>
       <a href="#" id="whatsapp-share" target="_blank">
-    <img src="icon/whatsapp.svg" alt="WhatsApp" />
+    <img src="https://itsgbemi.github.io/icon/whatsapp.svg" alt="WhatsApp" />
   </a>
     </div>
 
@@ -92,7 +97,7 @@
 <div class="author-box">
   <!-- Avatar, Name, and Title Box -->
   <div class="author-info-box">
-    <img src="image/gbemi.jpg" alt="Gbemi's Avatar" class="author-avatar" />
+    <img src="https://itsgbemi.github.io/image/gbemi.jpg" alt="Gbemi's Avatar" class="author-avatar" />
     <div class="author-details">
       <h4 class="author-name">Gbemisola Oyeniyi</h4>
       <p class="author-title">Growth Marketer, 3+ years of experience</p>
@@ -123,10 +128,10 @@
      <div class="footer-column">
      <h3>Information</h3>
       <ul>
-     <li><a href="learn-digital-skills.html">Learn Digital Skills</a></li>
-     <li><a href="sales-and-marketing.html">Sales and Marketing</a></li>
-      <li><a href="shop.html">Websites and Graphics Design</a></li>
-       <li><a href="blog.html">Blog</a></li>  
+     <li><a href="https://itsgbemi.github.io/learn-digital-skills.html">Learn Digital Skills</a></li>
+     <li><a href="https://itsgbemi.github.io/sales-and-marketing.html">Sales and Marketing</a></li>
+      <li><a href="https://itsgbemi.github.io/shop.html">Websites and Graphics Design</a></li>
+       <li><a href="https://itsgbemi.github.io/blog.html">Blog</a></li>  
      </ul>
   </div>
             
@@ -134,16 +139,16 @@
     <h3>Message Gbemi</h3>
     <div class="social-icons" id=personal>
         <a href="https://t.me/Gbemisola_Oyeniyi" class="icon-circle" target="_blank" rel="noopener noreferrer">
-            <img src="icon/telegram.svg" alt="Telegram">
+            <img src="https://itsgbemi.github.io/icon/telegram.svg" alt="Telegram">
         </a>
         <a href="https://wa.me/message/P2VMBJTN4M7SM1" class="icon-circle" target="_blank" rel="noopener noreferrer">
-            <img src="icon/whatsapp.svg" alt="WhatsApp">
+            <img src="https://itsgbemi.github.io/icon/whatsapp.svg" alt="WhatsApp">
         </a>
         <a href="https://www.instagram.com/learnwithgbemi/" class="icon-circle" target="_blank" rel="noopener noreferrer">
-            <img src="icon/instagram.svg" alt="Instagram">
+            <img src="https://itsgbemi.github.io/icon/instagram.svg" alt="Instagram">
         </a>
         <a href="https://www.facebook.com/gbemisola.oyeniyi/" class="icon-circle" target="_blank" rel="noopener noreferrer">
-            <img src="icon/facebook.svg" alt="Facebook">
+            <img src="https://itsgbemi.github.io/icon/facebook.svg" alt="Facebook">
         </a>
     </div>
 </div>
