--- a/learn-digital-skills/website-development.html
+++ b/learn-digital-skills/website-development.html
@@ -32,15 +32,15 @@
                 <a href="https://itsgbemi.github.io/contact.html" class="cta consultation">Get in touch</a>
             </div>
             <button class="mobile-menu-toggle" aria-expanded="false" aria-controls="mobile-menu">
-                <img src="icon/black-hamburger.svg" alt="Open navigation menu">
+                <img src="https://itsgbemi.github.io/icon/black-hamburger.svg" alt="Open navigation menu">
             </button>
         </div>
         <nav id="mobile-menu" class="mobile-nav" aria-hidden="true">
             <ul>
-                <li><a href="learn-digital-skills.html">Learn Digital Skills</a></li>
-                <li><a href="grow.html">Sales and Marketing</a></li>
-                <li><a href="shop.html">Website and Graphics</a></li>         
-                <li><a href="blog.html">Blog</a></li>                
+                <li><a href="https://itsgbemi.github.io/learn-digital-skills.html">Learn Digital Skills</a></li>
+                <li><a href="https://itsgbemi.github.io/sales-and-marketing.html">Sales and Marketing</a></li>
+                <li><a href="https://itsgbemi.github.io/shop.html">Website and Graphics</a></li>         
+                <li><a href="https://itsgbemi.github.io/blog.html">Blog</a></li>                
             </ul>
             <div class="mobile-cta">
                 <a href="https://itsgbemi.github.io/contact.html" class="mobile-cta-button">Get in touch</a>
