--- a/learn-digital-skills/website-development.html
+++ b/learn-digital-skills/website-development.html
@@ -168,8 +168,8 @@
         });
   
    document.addEventListener('DOMContentLoaded', function () {
-  const postTitle = encodeURIComponent('Learn Graphics Design');
-  const postUrl = encodeURIComponent('https://itsgbemi.github.io/learn-digital-skills/graphics-design');
+  const postTitle = encodeURIComponent('Learn Website Development');
+  const postUrl = encodeURIComponent('https://itsgbemi.github.io/learn-digital-skills/website-development');
   
   // Facebook
   document.getElementById('facebook-share').href = `https://www.facebook.com/sharer/sharer.php?u=${postUrl}`;
