--- a/shop.html
+++ b/shop.html
@@ -80,7 +80,7 @@
         <div class="services-description">
           <h2>PORTFOLIO WEBSITE #01</h2>
             <p>Present your skills and experience with a modern, streamlined portfolio. Designed for professionals across industries—whether you're a software developer, designer, or creative—this template helps you showcase your work, engage clients, and make a lasting impression.</p>
-        <a href="shop/dev-portfolio.html" class="project-snippet__button">
+        <a href="https://dev-olive-portfolio.vercel.app/" class="project-snippet__button">
                 Live preview 
             <img src="icon/black-redirect.svg" alt="Redirect Icon">
             </a>           
@@ -117,7 +117,7 @@
         <div class="services-description">
           <h2>ARCHITECTURAL FIRM WEBSITE</h2>
             <p>Highlight your firm's expertise with a sleek, professional portfolio. Perfect for architectural firms and businesses across industries, this template allows you to showcase your projects, share your vision, and attract new clients with a compelling visual presentation.</p>
-              <a href="shop/architect/index.html" class="project-snippet__button">
+              <a href="https://babsandco.vercel.app/" class="project-snippet__button">
                 Live preview 
             <img src="icon/black-redirect.svg" alt="Redirect Icon">
             </a>                 
@@ -147,7 +147,7 @@
         <div class="services-description">
           <h2>PORTFOLIO WEBSITE #02</h2>
          <p>Create a lasting impression with a portfolio that highlights your expertise and unique style. Designed for professionals across all fields</p>
-        <a href="shop/product-designer/index.html" class="project-snippet__button">
+        <a href="https://designer-jude-ibrahim.vercel.app/" class="project-snippet__button">
                 Live preview 
             <img src="icon/black-redirect.svg" alt="Redirect Icon">
             </a>               
