--- a/shop.html
+++ b/shop.html
@@ -8,15 +8,15 @@
     <meta name="author" content="Gbemisola Oyeniyi">
 <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Gbemisola Oyeniyi">
-    <meta property="og:description" content="Gbemisola Oyeniyi is a driven creator and strategic thinker, passionate about making herself proud through bold, meaningful work.">
+    <meta property="og:description" content="Shop customizable websites and design templates.">
     <meta property="og:image" content="https://itsgbemi.github.io/image/og.png">
-    <meta property="og:url" content="https://itsgbemi.github.io">
+    <meta property="og:url" content="https://itsgbemi.github.io/shop">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Gbemisola Oyeniyi">
-    <meta name="twitter:description" content="Gbemisola Oyeniyi is a driven creator and strategic thinker, passionate about making herself proud through bold, meaningful work.">
+    <meta name="twitter:description" content="Shop customizable websites and design templates.">
     <meta name="twitter:image" content="https://itsgbemi.github.io/image/og.png">
     <title>Shop website and design templates</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@200;300;500;700&family=Pacifico&display=swap" rel="stylesheet">
