--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Gbemisola Oyeniyi is a driven creator and strategic thinker, passionate about making herself proud through bold, meaningful work">
+    <meta name="description" content="Welcome to my blog! A space where I explore the intricacies of society, reflect on my personal journey, and occasionally dive into the world of poetry and storytelling.">
     <meta name="keywords" content="writer, creator, Gbemisola Oyeniyi, marketing">
     <meta name="author" content="Gbemisola Oyeniyi">
 <!-- Open Graph Meta Tags -->
@@ -20,7 +20,7 @@
     <meta name="twitter:image" content="https://itsgbemi.github.io/image/og.png">
 
 
-    <title>Gbemisola Oyeniyi</title>
+    <title>Blog - Gbemisola Oyeniyi</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@200;300;500;700&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 <link rel="icon" type="image/png" href="favicon/favicon-48x48.png" sizes="48x48" />
@@ -71,7 +71,24 @@
 </section>
 
 <div class="spacer"></div>
+<section class="services">
+    <div class="services-container">
+  <!-- Decorative Column: Image -->
+    <div class="services-image">
+      <img src="image/code-on-screen.jpg" alt="Code on Laptop Screen">
+     </div>      
 
+        <!-- Description Column: Text and Button -->
+        <div class="services-description">
+          <h2>MY CODING JOURNEY</h2>
+            <p>Back in 2021, I decided to learn to code. I started by searching online for free tutorials. I found W3Schools.com, a website with beginner coding lessons, and decided to dive in. HTML and CSS felt exciting – I loved learning how to build and style web pages. But then… I hit JavaScript.</p>
+           <a href="blog/my-coding-journey.html" class="project-snippet__button">
+                Read<img src="icon/black-redirect.svg" alt="Redirect Icon">
+            </a>            
+        </div>
+  
+   </div>
+</section>
 <section class="services">
     <div class="services-container">
   <!-- Decorative Column: Image -->
