--- a/blog.html
+++ b/blog.html
@@ -36,9 +36,9 @@
             <a href="index.html" class="logo" aria-label="Gbemi logo">Gbemi</a>
             <nav aria-label="Primary navigation" class="desktop-nav">
                 <ul>
-      <li><a href="learn-digital-skills.html">Learn Digital Skills</a></li>
-     <li><a href="sales-and-marketing.html">Sales and Marketing</a></li>
-      <li><a href="shop.html">Websites and Graphics</a></li>    
+      <li><a href="https://docs.google.com/document/d/1c9ZWbutqAUoVEcZ61cikaVyTlukUn09OHEF4M3XDjoA/edit?usp=drivesdk">View CV</a></li>
+     <li><a href="graphic-design.html">Graphic Designs</a></li>
+      <li><a href="shop.html">Shop</a></li>    
       <li><a href="blog.html">Blog</a></li>      
                 </ul>
             </nav>
@@ -51,9 +51,9 @@
         </div>
         <nav id="mobile-menu" class="mobile-nav" aria-hidden="true">
             <ul>
-     <li><a href="learn-digital-skills.html">Learn Digital Skills</a></li>
-     <li><a href="sales-and-marketing.html">Sales and Marketing</a></li>
-      <li><a href="shop.html">Websites and Graphics</a></li>    
+     <li><a href="https://docs.google.com/document/d/1c9ZWbutqAUoVEcZ61cikaVyTlukUn09OHEF4M3XDjoA/edit?usp=drivesdk">View CV</a></li>
+     <li><a href="graphic-design.html">Graphic Designs</a></li>
+      <li><a href="shop.html">Shop</a></li>    
       <li><a href="blog.html">Blog</a></li>      
             </ul>
             <div class="mobile-cta">
@@ -152,15 +152,15 @@
    <div class="footer-container">
      <div class="footer-column">
      <a href="#" class="logo">Gbemisola Oyeniyi</a>
-    <p class="inner-padding">Creating proudly. Living boldly. Dreaming freely.</p>
+    <p class="inner-padding">Results-driven Business Growth Strategist and Marketer</p>
       </div>
     
      <div class="footer-column">
      <h3>Information</h3>
       <ul>
-     <li><a href="learn-digital-skills.html">Learn Digital Skills</a></li>
-     <li><a href="sales-and-marketing.html">Sales and Marketing</a></li>
-      <li><a href="shop.html">Websites and Graphics Design</a></li>    
+     <li><a href="https://docs.google.com/document/d/1c9ZWbutqAUoVEcZ61cikaVyTlukUn09OHEF4M3XDjoA/edit?usp=drivesdk">View CV</a></li>
+     <li><a href="graphic-design.html">Graphic Designs</a></li>
+      <li><a href="shop.html">Shop</a></li>    
       <li><a href="blog.html">Blog</a></li>
      </ul>
   </div>
