--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Gbemisola Oyeniyi is a driven creator and strategic thinker, passionate about making herself proud through bold, meaningful work">
-    <meta name="keywords" content="writer, creator, Gbemisola Oyeniyi, marketing">
+    <meta name="description" content="Contact Gbemisola Oyeniyi via the provided form or social links in the footer.">
+    <meta name="keywords" content="contact page">
     <meta name="author" content="Gbemisola Oyeniyi">
-    <title>Gbemisola Oyeniyi</title>
+    <title>Contact Gbemisola Oyeniyi</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@200;300;500;700&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="contact.css">
 <link rel="icon" type="image/png" href="favicon/favicon-48x48.png" sizes="48x48" />
@@ -22,9 +22,9 @@
             <a href="index.html" class="logo" aria-label="Gbemi logo">Gbemi</a>
             <nav aria-label="Primary navigation" class="desktop-nav">
                 <ul>
-     <li><a href="learn-digital-skills.html">Learn Digital Skills</a></li>
-     <li><a href="sales-and-marketing.html">Sales and Marketing</a></li>
-      <li><a href="shop.html">Websites and Graphics</a></li>    
+     <li><a href="https://docs.google.com/document/d/1c9ZWbutqAUoVEcZ61cikaVyTlukUn09OHEF4M3XDjoA/edit?usp=drivesdk">View CV</a></li>
+     <li><a href="graphic-design.html">Graphic Designs</a></li>
+      <li><a href="shop.html">Shop</a></li>    
       <li><a href="blog.html">Blog</a></li>
                 </ul>
             </nav>
@@ -37,9 +37,9 @@
         </div>
         <nav id="mobile-menu" class="mobile-nav" aria-hidden="true">
             <ul>
-     <li><a href="learn-digital-skills.html">Learn Digital Skills</a></li>
-     <li><a href="sales-and-marketing.html">Sales and Marketing</a></li>
-      <li><a href="shop.html">Websites and Graphics</a></li>    
+     <li><a href="https://docs.google.com/document/d/1c9ZWbutqAUoVEcZ61cikaVyTlukUn09OHEF4M3XDjoA/edit?usp=drivesdk">View CV</a></li>
+     <li><a href="graphic-design.html">Graphic Designs</a></li>
+      <li><a href="shop.html">Shop</a></li>    
       <li><a href="blog.html">Blog</a></li>
             </ul>
             <div class="mobile-cta">
@@ -98,16 +98,17 @@
    <div class="footer-container">
      <div class="footer-column">
      <a href="index.html" class="logo">Gbemisola Oyeniyi</a>
-    <p class="inner-padding">Creating proudly. Living boldly. Dreaming freely.</p>
+    <p class="inner-padding">Results-driven Business Growth Strategist and Marketer</p>
       </div>
     
      <div class="footer-column">
      <h3>Information</h3>
       <ul>
-     <li><a href="learn-digital-skills.html">Learn Digital Skills</a></li>
-     <li><a href="sales-and-marketing.html">Sales and Marketing</a></li>
-      <li><a href="shop.html">Websites and Graphics</a></li>    
+     <li><a href="https://docs.google.com/document/d/1c9ZWbutqAUoVEcZ61cikaVyTlukUn09OHEF4M3XDjoA/edit?usp=drivesdk">View CV</a></li>
+     <li><a href="graphic-design.html">Graphic Designs</a></li>
+      <li><a href="shop.html">Shop</a></li>    
       <li><a href="blog.html">Blog</a></li>
+   <li><a href="contact.html">Contact</a></li>       
   </div>
             
   <div class="footer-column">
