--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <meta name="keywords" content="writer, creator, Gbemisola Oyeniyi, digital marketer, website developer, website designer, graphics designer">
     <meta name="author" content="Gbemisola Oyeniyi">
     <title>Gbemisola Oyeniyi</title>
+<!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Gbemisola Oyeniyi">
+    <meta property="og:description" content="Gbemisola Oyeniyi is a results-driven business growth strategist and marketer.">
+    <meta property="og:image" content="https://itsgbemi.github.io/image/og.png">
+    <meta property="og:url" content="https://itsgbemi.github.io">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Gbemisola Oyeniyi">
+    <meta name="twitter:description" content="Gbemisola Oyeniyi is a results-driven business growth strategist and marketer.">
+    <meta name="twitter:image" content="https://itsgbemi.github.io/image/og.png">
+    
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@200;300;500;700&family=Pacifico&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
