--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="services-description">
           <h2>Instagram Management</h2>
             <p>I curate engaging content by showcasing menu highlights through visually appealing videos, strategically paired with trending audio to enhance reach and engagement.</p>
-           <a href="shop.html" class="project-snippet__button">
+           <a href="https://www.instagram.com/opulentkitchenandlounge/" class="project-snippet__button">
                 View Instagram Page 
                 <img src="icon/black-redirect.svg" alt="Redirect Icon">
             </a>            
