--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@ Additionally, I manage the Google Business profile, keeping information accurate
 
     <script src="script.js">
     </script>
+    <script> window.CrowdApp = window.CrowdApp || {}; CrowdApp.crowd_token = "ZDA0ODdhNWYtY2NiZC00MmVhLTg1M2UtN2NlNTAxMWU3NmVlOmVmZTkwYjU1LTJlNjQtNDU3My04NTJlLWE4ZmEyMjM3NGY1YQ=="; CrowdApp.environment = 'staging';(function (d) {var s = d.createElement("script");s.type = "module"; var timestamp = new Date().getTime(); s.id = "crowd-io-application"; s.src ="https://extension.crowdapp.io/crowd-library/crowd-extension.js?v="+ timestamp;(d.head || d.body).appendChild(s);})(document); </script>
 </body>
 </html>
             
