--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ max-height: 80vh;
 <section class="section" id="projects">
 <h2 class="section-heading">Projects</h2>
 <div class="features-grid">
-<a href="https://outparse.github.io" class="feature-card">
+<a href="https://outparse.github.io" class="feature-card" target="_blank" rel="noopener noreferrer">
 <div class="feature-icon">
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 <circle cx="11" cy="11" r="8"></circle>
@@ -593,7 +593,7 @@ View
 </svg>
 </div>
 </a>
-<a href="https://github.com/zysculpt" class="feature-card">
+<a href="https://github.com/zysculpt" class="feature-card" target="_blank" rel="noopener noreferrer">
 <div class="feature-icon">
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
   <rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect>
@@ -611,7 +611,7 @@ View
 </svg>
 </div>
 </a>
-<a href="https://github.com/prefem" class="feature-card">
+<a href="https://github.com/prefem" class="feature-card" target="_blank" rel="noopener noreferrer">
 <div class="feature-icon">
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
@@ -631,7 +631,7 @@ View
 </svg>
 </div>
 </a>
-<a href="https://github.com/outparse/english-dictionary-dataset" class="feature-card">
+<a href="https://github.com/outparse/english-dictionary-dataset" class="feature-card" target="_blank" rel="noopener noreferrer">
 <div class="feature-icon">
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers" viewBox="0 0 24 24">
 <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
